# locales-rs

./: Cargo.toml  README.md
lichen_cli/: Cargo.toml
lichen_ipc/: Cargo.toml
src/: iso_3166.rs  iso_639_2.rs  iso_639_3.rs  lib.rs  registry.rs
