[package]
name = "locales-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
fs-err = { version = "3.0.0", features = ["tokio"] }
serde_json = "1.0.120"
serde = { version = "1.0.204", features = ["derive"] }
thiserror = "2.0.3"

[lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
semicolon_in_expressions_from_macros = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"
